// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MemoContentComponent /> should render edit button 1`] = `
<CommentContent>
  <Button
    as="div"
    className="edit-button"
    floated="right"
    labelPosition="right"
    onClick={[Function]}
    role="button"
    size="mini"
  >
    <Button
      as="button"
      basic={true}
      role="button"
    >
      <Icon
        as="i"
        name="pencil"
      />
      Edit
    </Button>
  </Button>
  <CommentAuthor
    as="a"
    onClick={[Function]}
  />
  <CommentMetadata>
    <span>
      posted 
      a few seconds ago
    </span>
  </CommentMetadata>
  <CommentText />
</CommentContent>
`;

exports[`<MemoContentComponent /> should render edit form 1`] = `
<CommentContent>
  <Button
    as="div"
    className="edit-button"
    floated="right"
    labelPosition="right"
    onClick={[Function]}
    role="button"
    size="mini"
  >
    <Button
      as="button"
      basic={true}
      role="button"
    >
      <Icon
        as="i"
        name="pencil"
      />
      Edit
    </Button>
  </Button>
  <CommentAuthor
    as="a"
    onClick={[Function]}
  />
  <CommentMetadata>
    <span>
      posted 
      a few seconds ago
    </span>
  </CommentMetadata>
  <WithFormik(MemoFormComponent)
    buttonLabel="Update Memo"
    onCanceled={[Function]}
    onSubmitted={[Function]}
  />
</CommentContent>
`;

exports[`<MemoContentComponent /> should render without crashing 1`] = `
<CommentContent>
  <CommentAuthor
    as="a"
    onClick={[Function]}
  />
  <CommentMetadata>
    <span>
      posted 
      a few seconds ago
    </span>
  </CommentMetadata>
  <CommentText />
</CommentContent>
`;
